fixed link styling & footer margin overflow

--- a/public/src/app.pages/home/home.scss
+++ b/public/src/app.pages/home/home.scss
@@ -1,5 +1,10 @@
 .main-menu {
   margin-top: 8rem;
+  a,
+  a:hover {
+    color: white;
+    text-decoration: none;
+  }
   span {
     font-size: 1.2rem;
     font-weight: 600;
